frontend/src/styles/pages/_dsm5-criteria.scss
body.dsm5-criteria {
    $page: "dsm5-criteria";

    h1.heading--1 {
        padding-bottom: 32px;

        @include mq('lg') {
            width: percentage(611/655);
            margin: 0 auto;
        }

        @include mq('md') {
            // width: percentage(502/655);
            // min-width: 502px;
            width: 502px;
            margin: 0 auto;
        }

        @include mq('sm') {
            width: percentage(555/655);
            text-align: center;
            margin-left: 8.5%;
        }
    }


    .section--individuals {
        background: #252F39;

        .wrap--content {
            @include mq("lg") {
                width: 655px;
            }
        }

        p.disclaimer {
            @include mq("lg") {
                font-size: 18px;
            }
            @include mq("md") {
                font-size: 16px;
            }
            @include mq("sm") {
                font-size: 16px;
                text-align: center;
            }
        }
        
        .trim{
            @include mq("lg") {
                width: 555px;
                margin: 60px auto;
            }
            @include mq("md") {
                margin: 40px auto;
            }
            @include mq("sm") {
                margin-top: 30px;
                margin-bottom: 40px;
            }
        }
        @include mq("md") {
            .wrap--refs{
                padding-left:0;
                padding-right:0;
            }
        }

        ol.refs{
            padding-bottom: 0px;
            
            @include mq("md") {
                margin-left: auto;
            }

            @include mq("sm"){
                width: 97%;
            }
            
        }
        
        ol.refs li{

            @include mq("sm"){
                font-size: 14px !important;
                color: #858B91 !important;
                line-height: 17px;
                margin: 0 auto !important;
                width: percentage(300/320);
                
            }
        }
        
    }

    ul.boxed  li{
        padding-left: 35px;
        padding-top: 25px;
        
        @include mq("md") {
            font-size: 16px;
            color: #D6D8DA;
            line-height: 18px;
        }
    }
    
    .section--triggers {
        background: #333E48;
        background-image: radial-gradient(50% 149%, #333E48 17%, #252F39 100%);

        .wrap--content {
            @include mq("lg") {
                width: 555px;

                ul.square.line{
                    .heading--2{
                        text-align:left;
                        display: inline-block;
                    }
                }
            }
        }
    }


    @include mq('md') {

    }
    @include mq('sm') {
        .heading--1{
            font-size: 26px !important;
            color: #FDBD3E;
            line-height: 28px;
            margin-bottom: 11px;
        }
        
        .boxed li{
            font-size: 16px !important;
            color: #D6D8DA;
            line-height: 18px;
        }
    }
    
    
}

